--- a/PEP_Main.html
+++ b/PEP_Main.html
@@ -1,4 +1,4 @@
-```html
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,15 +13,28 @@
         }
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #052e16;
-            color: #fff;
+            background-color: #f8f9fa;
+            color: #333;
         }
-        .navbar {
-            background-color: #022c0f !important;
+        .banner {
+            width: 100%;
+            height: auto;
         }
-        .navbar-brand, .nav-link {
+        .navigation-bar {
+            background-color: #2c5530;
+            padding: 10px 0;
+        }
+        .navigation-bar .nav-link {
             color: #fff !important;
             font-weight: 700;
+            margin: 0 20px;
+        }
+        .navigation-bar .tree-divider {
+            height: 20px;
+            width: 20px;
+            border-radius: 50%;
+            margin: 0 10px;
+            vertical-align: middle;
         }
         .hero-carousel .carousel-item img {
             height: 80vh;
@@ -30,23 +43,25 @@
         .section-title {
             text-align: center;
             margin-bottom: 40px;
-            color: #d1fae5;
+            color: #2c5530;
             font-family: 'Oswald', sans-serif;
             font-weight: 700;
         }
         h1, h2, h3, h4, .card-title {
             font-family: 'Oswald', sans-serif;
             font-weight: 700;
+            color: #2c5530;
         }
         .card {
-            background-color: #1f2937;
-            color: #fff;
+            background-color: #fff;
+            color: #333;
+            border: 1px solid #e9ecef;
         }
         .bg-mid {
-            background-color: #2d6a4f;
+            background-color: #e9ecef;
         }
         footer {
-            background-color: #022c0f;
+            background-color: #2c5530;
             color: #fff;
             padding: 20px 0;
         }
@@ -86,16 +101,34 @@
             opacity: 1;
             transform: translateX(0);
         }
-        .navbar-brand img {
-            height: 50px;
-        }
         .cta-section {
             text-align: center;
             padding: 40px 0;
+            background-color: #2c5530;
+            color: #fff;
+        }
+        .cta-section a {
+            background-color: #fff;
+            color: #2c5530;
+        }
+        .cta-section a:hover {
+            background-color: #e9ecef;
         }
         .gallery-grid a {
             display: block;
             margin-bottom: 20px;
+            background-color: #fff;
+            color: #333;
+            border: 1px solid #e9ecef;
+        }
+        .gallery-grid a:hover {
+            background-color: #2c5530;
+            color: #fff;
+        }
+        form .form-control {
+            background-color: #fff;
+            color: #333;
+            border: 1px solid #e9ecef;
         }
     </style>
 </head>
@@ -103,36 +136,23 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-<nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand mx-auto" href="#"><img src="https://static.vecteezy.com/system/resources/previews/015/668/058/non_2x/christmas-tree-farm-logo-on-white-background-christmas-logo-free-vector.jpg" alt="Placeholder Logo"></a>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="PEP_AboutUs.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="PEP_Catalog.html">Catalog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="PEP_Reviews.html">Reviews</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="PEP_VisitUs.html">Visit Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="PEP_ContactUs.html">Contact</a>
-                </li>
-            </ul>
+<img src="Banner_Logo.png" class="img-fluid banner" alt="Banner Logo">
+
+<div class="navigation-bar">
+    <div class="container">
+        <div class="d-flex justify-content-between align-items-center">
+            <a class="nav-link" href="PEP_AboutUs.html">About</a>
+            <img src="Tree.png" class="tree-divider" alt="Tree Divider">
+            <a class="nav-link" href="PEP_Catalog.html">Catalog</a>
+            <img src="Tree.png" class="tree-divider" alt="Tree Divider">
+            <a class="nav-link" href="PEP_Reviews.html">Reviews</a>
+            <img src="Tree.png" class="tree-divider" alt="Tree Divider">
+            <a class="nav-link" href="PEP_VisitUs.html">Visit Us</a>
+            <img src="Tree.png" class="tree-divider" alt="Tree Divider">
+            <a class="nav-link" href="PEP_ContactUs.html">Contact</a>
         </div>
     </div>
-</nav>
+</div>
 
 <div id="heroCarousel" class="carousel slide hero-carousel animate-bottom" data-bs-ride="carousel">
     <div class="carousel-inner">
@@ -162,9 +182,9 @@
 <section id="hours" class="py-5 bg-mid animate-left">
     <div class="container text-center">
         <h3 class="section-title">Operating Hours</h3>
-        <p>Weekends: 9:00 AM - 5:00 PM</p>
-        <p>Weekdays: Closed (Check for updates)</p>
-        <p>Open seasonally starting the day after Thanksgiving.</p>
+        <p class="text-dark">Weekends: 9:00 AM - 5:00 PM</p>
+        <p class="text-dark">Weekdays: Closed (Check for updates)</p>
+        <p class="text-dark">Open seasonally starting the day after Thanksgiving.</p>
     </div>
 </section>
 
@@ -200,7 +220,7 @@
     </div>
 </section>
 
-<section class="cta-section bg-mid animate-right">
+<section class="cta-section animate-right">
     <div class="container text-center">
         <h2>Come Choose Your Tree</h2>
         <a href="PEP_VisitUs.html" class="btn btn-primary mx-2">Visit Us</a>
@@ -212,18 +232,18 @@
 <section id="contact" class="py-5 animate-bottom">
     <div class="container">
         <h3 class="section-title">Get in Touch</h3>
-        <p>Thank you for reaching out to Petrongolo Evergreen Plantation! We'd love to help. Please leave us a message, and we'll get back to you soon.</p>
+        <p class="text-dark">Thank you for reaching out to Petrongolo Evergreen Plantation! We'd love to help. Please leave us a message, and we'll get back to you soon.</p>
         <form>
             <div class="mb-3">
-                <label for="name" class="form-label">Name</label>
+                <label for="name" class="form-label text-dark">Name</label>
                 <input type="text" class="form-control" id="name">
             </div>
             <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
+                <label for="email" class="form-label text-dark">Email</label>
                 <input type="email" class="form-control" id="email">
             </div>
             <div class="mb-3">
-                <label for="message" class="form-label">Message</label>
+                <label for="message" class="form-label text-dark">Message</label>
                 <textarea class="form-control" id="message" rows="3"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Send</button>
@@ -232,10 +252,10 @@
 </section>
 
 <footer class="text-center">
-    <p><a href="https://www.facebook.com/p/Petrongolo-Evergreen-Plantation-100064604442455/" target="_blank">Facebook</a> | Email: info@petrongolo.com | Phone: (609) 567-0336</p>
+    <p><a href="https://www.facebook.com/p/Petrongolo-Evergreen-Plantation-100064604442455/" target="_blank" style="color: #fff;">Facebook</a> | Email: info@petrongolo.com | Phone: (609) 567-0336</p>
     <p>&copy; 2025 Petrongolo Evergreen Plantation. All rights reserved.</p>
     <div>
-        <a href="#">Home</a> | <a href="PEP_AboutUs.html">About</a> | <a href="PEP_Catalog.html">Catalog</a> | <a href="PEP_Reviews.html">Reviews</a> | <a href="PEP_VisitUs.html">Visit Us</a> | <a href="PEP_ContactUs.html">Contact</a>
+        <a href="#" style="color: #fff;">Home</a> | <a href="PEP_AboutUs.html" style="color: #fff;">About</a> | <a href="PEP_Catalog.html" style="color: #fff;">Catalog</a> | <a href="PEP_Reviews.html" style="color: #fff;">Reviews</a> | <a href="PEP_VisitUs.html" style="color: #fff;">Visit Us</a> | <a href="PEP_ContactUs.html" style="color: #fff;">Contact</a>
     </div>
 </footer>
 
