--- a/PEP_Main.html
+++ b/PEP_Main.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -143,10 +142,20 @@ color: #fff;
 .product-card .card-title {
 color: #fff;
         }
+.login-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 10;
+  background-color: #2c5530;
+  color: #fff;
+  border: none;
+}
 </style>
 </head>
 <body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<button type="button" class="btn btn-primary login-btn" data-bs-toggle="modal" data-bs-target="#loginModal">Login / Sign Up</button>
 <img src="Banner_Logo.png" class="img-fluid banner" alt="Banner Logo">
 <div class="navigation-bar">
 <div class="container">
@@ -283,8 +292,121 @@ color: #fff;
 <a href="#" style="color: #fff;">Home</a> | <a href="PEP_AboutUs.html" style="color: #fff;">About</a> | <a href="PEP_Catalog.html" style="color: #fff;">Catalog</a> | <a href="PEP_Reviews.html" style="color: #fff;">Reviews</a> | <a href="PEP_VisitUs.html" style="color: #fff;">Visit Us</a> | <a href="PEP_ContactUs.html" style="color: #fff;">Contact</a>
 </div>
 </footer>
+<!-- Login Modal -->
+<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="loginModalLabel">Login or Sign Up</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="text-center">
+          <button type="button" class="btn btn-primary mb-3" onclick="showCustomerLogin()">Customer Login / Sign Up</button>
+          <button type="button" class="btn btn-secondary mb-3" onclick="showEmployeeLogin()">Employee Login</button>
+        </div>
+        <div id="customerForm" style="display: none;">
+          <form id="customerSignInForm">
+            <h6>Customer Sign In</h6>
+            <div class="mb-3">
+              <label for="custUsername" class="form-label">Username</label>
+              <input type="text" class="form-control" id="custUsername" placeholder="Username">
+            </div>
+            <div class="mb-3">
+              <label for="custPassword" class="form-label">Password</label>
+              <input type="password" class="form-control" id="custPassword" placeholder="Password">
+            </div>
+            <button type="button" class="btn btn-primary" onclick="handleCustomerSignIn()">Sign In</button>
+            <p class="mt-2">Don't have an account? <a href="#" onclick="showSignUp()">Sign Up</a></p>
+          </form>
+          <form id="customerSignUpForm" style="display: none;">
+            <h6>Customer Sign Up</h6>
+            <div class="mb-3">
+              <label for="fname" class="form-label">First Name</label>
+              <input type="text" class="form-control" id="fname" placeholder="First Name">
+            </div>
+            <div class="mb-3">
+              <label for="lname" class="form-label">Last Name</label>
+              <input type="text" class="form-control" id="lname" placeholder="Last Name">
+            </div>
+            <div class="mb-3">
+              <label for="phone" class="form-label">Phone Number</label>
+              <input type="tel" class="form-control" id="phone" placeholder="Phone Number">
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" class="form-control" id="email" placeholder="Email">
+            </div>
+            <div class="mb-3">
+              <label for="username" class="form-label">Username</label>
+              <input type="text" class="form-control" id="username" placeholder="Username">
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Password</label>
+              <input type="password" class="form-control" id="password" placeholder="Password">
+            </div>
+            <button type="button" class="btn btn-primary" onclick="handleSignUp()">Sign Up</button>
+            <p class="mt-2">Already have an account? <a href="#" onclick="showSignIn()">Sign In</a></p>
+          </form>
+        </div>
+        <div id="employeeForm" style="display: none;">
+          <form>
+            <h6>Employee Sign In</h6>
+            <div class="mb-3">
+              <label for="empEmail" class="form-label">Email</label>
+              <input type="email" class="form-control" id="empEmail" placeholder="Email">
+            </div>
+            <div class="mb-3">
+              <label for="empPassword" class="form-label">Password</label>
+              <input type="password" class="form-control" id="empPassword" placeholder="Password">
+            </div>
+            <button type="button" class="btn btn-primary" onclick="handleEmployeeSignIn()">Sign In</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <script>
-// Scroll animation observer
+function showCustomerLogin() {
+  document.getElementById('customerForm').style.display = 'block';
+  document.getElementById('employeeForm').style.display = 'none';
+  document.getElementById('customerSignInForm').style.display = 'block';
+  document.getElementById('customerSignUpForm').style.display = 'none';
+}
+
+function showEmployeeLogin() {
+  document.getElementById('customerForm').style.display = 'none';
+  document.getElementById('employeeForm').style.display = 'block';
+}
+
+function showSignUp() {
+  document.getElementById('customerSignInForm').style.display = 'none';
+  document.getElementById('customerSignUpForm').style.display = 'block';
+}
+
+function showSignIn() {
+  document.getElementById('customerSignUpForm').style.display = 'none';
+  document.getElementById('customerSignInForm').style.display = 'block';
+}
+
+// Placeholder functions for form submissions (to be linked to backend later)
+function handleCustomerSignIn() {
+  alert('Customer sign in successful! (Static placeholder)');
+  bootstrap.Modal.getInstance(document.getElementById('loginModal')).hide();
+}
+
+function handleSignUp() {
+  alert('Sign up successful! Please sign in. (Static placeholder)');
+  showSignIn();
+}
+
+function handleEmployeeSignIn() {
+  alert('Employee sign in successful! Redirecting to portal... (Static placeholder)');
+  window.location.href = 'PEP_EmployeePortal.html'; // Redirect to portal page
+}
+
+// Scroll animation observer (existing)
 const sections = document.querySelectorAll('.animate-bottom, .animate-left, .animate-zoom, .animate-right');
 const options = {
 threshold: 0.025
