--- a/PEP_Admin.html
+++ b/PEP_Admin.html
@@ -69,13 +69,13 @@
     <h2 class="section-title">Admin Management</h2>
     <ul class="nav nav-tabs" id="adminTabs" role="tablist">
       <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="schedule-tab" data-bs-toggle="tab" data-bs-target="#schedule" type="button" role="tab" aria-controls="schedule" aria-selected="true">Edit Schedules</button>
+        <button class="nav-link active" id="schedule-tab" data-bs-toggle="tab" data-bs-target="#schedule" type="button" role="tab" aria-controls="schedule" aria-selected="true" style="color: #2c5530;"><p style="color: #2c5530;">Edit Schedules</p></button>
       </li>
       <li class="nav-item" role="presentation">
-        <button class="nav-link" id="tasks-tab" data-bs-toggle="tab" data-bs-target="#tasks" type="button" role="tab" aria-controls="tasks" aria-selected="false">Edit Tasks</button>
+        <button class="nav-link" id="tasks-tab" data-bs-toggle="tab" data-bs-target="#tasks" type="button" role="tab" aria-controls="tasks" aria-selected="false"><p style="color: #2c5530;">Edit Tasks</p></button>
       </li>
       <li class="nav-item" role="presentation">
-        <button class="nav-link" id="accounts-tab" data-bs-toggle="tab" data-bs-target="#accounts" type="button" role="tab" aria-controls="accounts" aria-selected="false">Manage Accounts</button>
+        <button class="nav-link" id="accounts-tab" data-bs-toggle="tab" data-bs-target="#accounts" type="button" role="tab" aria-controls="accounts" aria-selected="false"><p style="color: #2c5530;">Manage Accounts</p></button>
       </li>
     </ul>
     <div class="tab-content" id="adminTabContent">
