--- a/PEP_AboutUs.html
+++ b/PEP_AboutUs.html
@@ -118,7 +118,7 @@ color: #fff;
 <div class="navigation-bar">
 <div class="container">
 <div class="d-flex justify-content-between align-items-center">
-<a class="nav-link" href="PEP_Main.html">Home</a>
+<a class="nav-link" href="PEP_Main.php">Home</a>
 <img src="Tree.png" class="tree-divider" alt="Tree Divider">
 <a class="nav-link" href="PEP_Catalog.html">Catalog</a>
 <img src="Tree.png" class="tree-divider" alt="Tree Divider">
