--- a/PEP_Reviews.html
+++ b/PEP_Reviews.html
@@ -139,7 +139,7 @@ form .form-control {
 <div class="navigation-bar">
   <div class="container">
     <div class="d-flex justify-content-between align-items-center">
-      <a class="nav-link" href="PEP_Main.html">Home</a>
+      <a class="nav-link" href="PEP_Main.php">Home</a>
       <img src="Tree.png" class="tree-divider" alt="Tree Divider">
       <a class="nav-link" href="PEP_AboutUs.html">About</a>
       <img src="Tree.png" class="tree-divider" alt="Tree Divider">
@@ -356,7 +356,7 @@ function showSignIn() {
 function handleCustomerSignInReview() {
   alert('Customer sign in successful! Redirecting to write review... (Static placeholder)');
   bootstrap.Modal.getInstance(document.getElementById('loginModal')).hide();
-  window.location.href = 'PEP_ReviewWrite.html';
+  window.location.href = 'PEP_ReviewWrite.php';
 }
 
 function handleSignUpReview() {
@@ -367,11 +367,11 @@ function handleSignUpReview() {
 function handleEmployeeSignInReview() {
   alert('Employee sign in successful! Redirecting to write review... (Static placeholder)');
   bootstrap.Modal.getInstance(document.getElementById('loginModal')).hide();
-  window.location.href = 'PEP_ReviewWrite.html';
+  window.location.href = 'PEP_ReviewWrite.php';
 }
 
 function bypassToReviewWrite() {
-  window.location.href = 'PEP_ReviewWrite.html';
+  window.location.href = 'PEP_ReviewWrite.php';
 }
 </script>
 </body>
